--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expressapp",
   "version": "1.0.0",
   "scripts": {
-    "start": "node app.js"
+    "start": "node App.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
